--- a/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
+++ b/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
@@ -1,7 +1,7 @@
 blueprint:
   name: "⚡\U0001F4A1 JJs Light Control With Helpers \U0001F4A1⚡"
   description: "# JJs Light Control With Helpers\n
-    **Version: 1.3.9**\n
+    **Version: 1.3.11**\n
     ## Light control automation that has:\n
     - Two light scenes, one for day and night\n
     - Wont override the current light state if manually changed\n
@@ -317,36 +317,52 @@ blueprint:
               step: 1
     datetime_settings:
       collapsed: true
-      name: datetime settings *
+      name: datetime settings
       icon: mdi:clipboard-text-clock-outline
       description: 'datetime settings.
 
         '
       input:
         in_datetime_day_time:
-          name: Datetime start for day scene
+          name: Datetime start for day scene (optional input_number helper)
           description:
             "### \U0001F4C5⌚\U0001F31E\n- input_datetime helper start time
-            for activating the day scene selected below."
+            for activating the day scene."
           default: []
           selector:
             entity:
               domain:
                 - input_datetime
               multiple: false
+        in_datetime_day_time_constant:
+          name: Datetime start for day scene (used if no helper listed)
+          description:
+            "### \U0001F4C5⌚\U0001F31E\n- Start time
+            for activating the day scene."
+          default: "06:30:00"
+          selector:
+            time: {}
         in_datetime_night_time:
           name: Datetime start for night scene
           description:
             "### \U0001F4C5⌚\U0001F319\n- input_datetime helper start time
-            for activating the day scene selected below."
+            for activating the night scene."
           default: []
           selector:
             entity:
               domain:
                 - input_datetime
               multiple: false
+        in_datetime_night_time_constant:
+          name: Datetime start for night scene
+          description:
+            "### \U0001F4C5⌚\U0001F319\n- Start time
+            for activating the night scene."
+          default: "24:00:00"
+          selector:
+            time: {}
     boolean_settings:
-      name: Automation logic settings *
+      name: Automation logic settings
       icon: mdi:toggle-switch
       description: 'Automation boolean settings.
 
@@ -354,7 +370,7 @@ blueprint:
       collapsed: true
       input:
         in_bool_auto_enable:
-          name: Input boolean enable
+          name: Input boolean enable (true if left empty)
           description:
             "### \U0001F51B\n- input_boolean helper for enabling and disabling
             this automation"
@@ -411,10 +427,33 @@ variables:
     {% else %}
       {{ in_num_transition_time_fast_constant | int }}
     {% endif %}
+  in_num_hold_scene_ent: >-
+    {% if (in_num_hold_scene | length > 0) %}
+      {{ in_num_hold_scene | int }}
+    {% else %}
+      {{ in_num_hold_scene_constant | int }}
+    {% endif %}
   # create the temp scene name based off this automation's ID
   temp_scene_name_ent: >-
     jjs_recovery_scene_for_zone_{{ this.entity_id.split('.')[-1] }}
-  in_num_hold_scene_ent: !input in_num_hold_scene
+  in_datetime_day_time_ent: >-
+    {% if in_datetime_day_time | length > 0 %}
+      {{ states(in_datetime_day_time) }}
+    {% else %}
+      {{ in_datetime_day_time_constant }}
+    {% endif %}
+  in_datetime_night_time_ent: >-
+    {% if in_datetime_night_time | length > 0 %}
+      {{ states(in_datetime_night_time) }}
+    {% else %}
+      {{ in_datetime_night_time_constant }}
+    {% endif %}
+  in_bool_auto_enable_ent: >-
+    {% if (in_bool_auto_enable | length > 0) %}
+      {{ in_bool_auto_enable }}
+    {% else %}
+      true
+    {% endif %}
 # alias: JJs light ctrl with helpers
 trigger:
   - platform: state
@@ -454,7 +493,7 @@ condition: []
 action:
   - if:
       - condition: state
-        entity_id: !input in_bool_auto_enable
+        entity_id: "{{ in_bool_auto_enable_ent }}"
         state: "on"
     then:
       - choose:
@@ -479,8 +518,8 @@ action:
                 then:
                   - if:
                       - condition: time
-                        before: !input in_datetime_night_time
-                        after: !input in_datetime_day_time
+                        before: "{{ in_datetime_night_time_ent }}"
+                        after: "{{ in_datetime_day_time_ent }}"
                         alias: Time condition day
                     then:
                       - service: scene.turn_on
@@ -492,8 +531,8 @@ action:
                     else:
                       - if:
                           - condition: time
-                            before: !input in_datetime_day_time
-                            after: !input in_datetime_night_time
+                            before: "{{ in_datetime_day_time_ent }}"
+                            after: "{{ in_datetime_night_time_ent }}"
                             alias: Time condition night
                         then:
                           - service: scene.turn_on
@@ -540,8 +579,8 @@ action:
             sequence:
               - if:
                   - condition: time
-                    before: !input in_datetime_night_time
-                    after: !input in_datetime_day_time
+                    before: "{{ in_datetime_night_time_ent }}"
+                    after: "{{ in_datetime_day_time_ent }}"
                     alias: Time condition day
                 then:
                   - service: timer.start
@@ -554,8 +593,8 @@ action:
                 else:
                   - if:
                       - condition: time
-                        before: !input in_datetime_day_time
-                        after: !input in_datetime_night_time
+                        before: "{{ in_datetime_day_time_ent }}"
+                        after: "{{ in_datetime_night_time_ent }}"
                         alias: Time condition night
                     then:
                       - service: timer.start
@@ -646,8 +685,8 @@ action:
                               entity_id: !input light_target
                   - if:
                       - condition: time
-                        before: !input in_datetime_night_time
-                        after: !input in_datetime_day_time
+                        before: "{{ in_datetime_night_time_ent }}"
+                        after: "{{ in_datetime_day_time_ent }}"
                         alias: Time condition day
                     then:
                       - service: timer.start
@@ -660,8 +699,8 @@ action:
                     else:
                       - if:
                           - condition: time
-                            before: !input in_datetime_day_time
-                            after: !input in_datetime_night_time
+                            before: "{{ in_datetime_day_time_ent }}"
+                            after: "{{ in_datetime_night_time_ent }}"
                             alias: Time condition night
                         then:
                           - service: timer.start
@@ -693,8 +732,8 @@ action:
                       entity_id: !input light_target
                   - if:
                       - condition: time
-                        before: !input in_datetime_night_time
-                        after: !input in_datetime_day_time
+                        before: "{{ in_datetime_night_time_ent }}"
+                        after: "{{ in_datetime_day_time_ent }}"
                         alias: Time condition day
                     then:
                       - service: timer.start
@@ -707,8 +746,8 @@ action:
                     else:
                       - if:
                           - condition: time
-                            before: !input in_datetime_day_time
-                            after: !input in_datetime_night_time
+                            before: "{{ in_datetime_day_time_ent }}"
+                            after: "{{ in_datetime_night_time_ent }}"
                             alias: Time condition night
                         then:
                           - service: timer.start
